reflector_service/reflector-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reflector
spec:
  selector:
    app: reflector-deploy
  ports:
    - port: 80
      targetPort: 5000
